# local_bluetooth_uart

./: .gitmodules  README.md
local_bluetooth_uart/: ARCHITECTURE_NOTES.md  README.md  ffigen.yaml  pubspec.yaml
local_bluetooth_uart/android/app/: build.gradle.kts
local_bluetooth_uart/android/app/src/main/: AndroidManifest.xml
local_bluetooth_uart/android/app/src/main/kotlin/com/example/local_bluetooth_uart/: MainActivity.kt
local_bluetooth_uart/ios/Runner/: Info.plist
local_bluetooth_uart/ios/Runner.xcodeproj/: project.pbxproj
local_bluetooth_uart/lib/: main.dart
local_bluetooth_uart/lib/src/: ble_dealer.dart  ble_player.dart
local_bluetooth_uart/lib/src/native/: simplecble_bindings.dart
local_bluetooth_uart/linux/: CMakeLists.txt
local_bluetooth_uart/linux/runner/: my_application.cc
local_bluetooth_uart/macos/Runner.xcodeproj/: project.pbxproj
local_bluetooth_uart/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
local_bluetooth_uart/macos/Runner/Configs/: AppInfo.xcconfig
local_bluetooth_uart/src/: CMakeLists.txt  simplecble.cpp  simplecble.h
local_bluetooth_uart/test/: widget_test.dart
local_bluetooth_uart/web/: index.html  manifest.json
local_bluetooth_uart/windows/: CMakeLists.txt
local_bluetooth_uart/windows/runner/: Runner.rc  main.cpp
